[gd_scene load_steps=12 format=3 uid="uid://b14p7pi4xlfv"]

[ext_resource type="Script" path="res://src/nav_bar.gd" id="1_frb4r"]
[ext_resource type="Texture2D" uid="uid://v72ano12hi5q" path="res://assets/graphics/icon_home.png" id="1_gewqd"]
[ext_resource type="Texture2D" uid="uid://crc0vgls7jey3" path="res://assets/graphics/Icon_2.png" id="1_gq80u"]
[ext_resource type="Texture2D" uid="uid://ceumackpjvkp7" path="res://assets/graphics/icon_home_purple.png" id="1_xg1o8"]
[ext_resource type="Texture2D" uid="uid://fuijdadesu00" path="res://assets/graphics/icon_3.png" id="3_5v8wn"]
[ext_resource type="PackedScene" uid="uid://3rpq0vf3najd" path="res://scenes/empty_button.tscn" id="3_f73q7"]
[ext_resource type="Texture2D" uid="uid://cuiy2f8dijbip" path="res://assets/graphics/icon_2_purple.png" id="4_dq3dt"]
[ext_resource type="Texture2D" uid="uid://drgbpt0xl4qwo" path="res://assets/graphics/icon_4.png" id="4_vh2p4"]
[ext_resource type="Texture2D" uid="uid://bey1e3sid33qf" path="res://assets/graphics/icon_5.png" id="5_l2750"]
[ext_resource type="Texture2D" uid="uid://warp0eaxb88r" path="res://assets/graphics/icon_6.png" id="6_yevqc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogqy5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 2
border_color = Color(0.411765, 0.403922, 0.411765, 1)
border_blend = true

[node name="NavBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 63)
size_flags_vertical = 10
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ogqy5")
script = ExtResource("1_frb4r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_right = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_gewqd")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/TextureRect"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("1_xg1o8")

[node name="HomeButton" parent="MarginContainer/HBoxContainer/TextureRect" instance=ExtResource("3_f73q7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_gq80u")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/TextureRect2"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("4_dq3dt")

[node name="BookButton" parent="MarginContainer/HBoxContainer/TextureRect2" instance=ExtResource("3_f73q7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_5v8wn")

[node name="Button" parent="MarginContainer/HBoxContainer/TextureRect3" instance=ExtResource("3_f73q7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_vh2p4")

[node name="Button" parent="MarginContainer/HBoxContainer/TextureRect4" instance=ExtResource("3_f73q7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_l2750")

[node name="Button" parent="MarginContainer/HBoxContainer/TextureRect5" instance=ExtResource("3_f73q7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_yevqc")

[node name="Button" parent="MarginContainer/HBoxContainer/TextureRect6" instance=ExtResource("3_f73q7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureRect/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureRect2/BookButton" to="." method="_on_book_button_pressed"]
